[package]
name = "esp-test"
version = "0.1.0"
authors = ["mumblingdrunkard"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-time = { version = "0.1.5", features = [ "nightly" ] }
hal = { package = "esp32-hal", version = "0.16.0", features = [ "embassy", "embassy-time-timg0", "embassy-executor-interrupt" ] }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "7632e74", features = ["esp32", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
esp-hal-common = { version = "0.13.1", features = [ "esp32" ] }
static_cell = { version = "2.0.0", features = [ "nightly" ] }
embassy-executor = { version = "0.3.3", features = [ "nightly" ] }
